small optimization (patch provided by Ronald Brill).